feat: add DatabaseClient for storing transform results to Postgres
- DatabaseClient with postgres (porsager/postgres) driver
- ensureDataSource: upsert data source, update last_fetched
- ensurePostalCodes: auto-create missing postal codes
- storeBuildingTypeMappings: upsert source → canonical type mappings
- insertPriceRecords: upsert with batch support (500/batch)
- storeTransformResult: full pipeline convenience method
- index.ts: conditional DB insert when DATABASE_URL is set
- Without DATABASE_URL runs in preview mode (pretty-print only)
- All existing tests still pass

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "pino": "^10.3.0"
+    "pino": "^10.3.0",
+    "postgres": "^3.4.8"
   }
 }
